==2011-07==
* Added compatibility with Mac OS X 10.7
* Fixed GLSL error in glUniformMatrix3fv
* Added UTF-8 copy/paste support with wstring
* Implemented powerstate in monitors
* Fixed problem when removing a monitor in full screen
* Fixed canvas vertical and horizontal video center/size
* Fixed canvas interface and OpenGLHAL contrast/brightness
* Configured monitor according to color carrier (and changes luma bandwidth accordingly)
* Implemented Apple-1 terminal copy line trimming
* Added Apple-1 terminal copy/paste support
* Implemented Apple-1 terminal
* Implemented daisy chain device removal
* Fixed hardware library detail view filtering
* Improved portaudio latency
* Fixed brigthness in monochrome
* Implemented device replacement by dragging
* Merged available ports with other groups

==2011-06==
* Fixed canvas hiding when adding devices
* Implemented OEEmulation removeDevice
* Implemented delete device through Edit>Delete, or CMD+BACKSPACE
* Fixed recursive lock problem when adding a canvas
* Implemented connection of main inlets
* Fixed connection order
* Implemented OEEmulation addDocument
* Skipped rev. 666
* Implemented library window filtering
* Implemented library window
* Implemented drop of library items
* Updated connector images

==2011-05==
* Removed AVAILABLE PORTS disclosure triangle and port names with port types
* Improved printing, display canvases are now displays centered and single-page always
* Fixed printing
* Fixed getImage, the front buffer is now used
* Fixed canvas display link trouble, canvases are no longer sleeping when they shouldn't
* Fixed errors around glCopyTexSubImage2D
* Fixed resize flickering (THIS ONE WAS HARD), CGL doesn't like multithreading+backbuffer rendering
* Fixed canvas copy
* Added support for detecting default shaderEnable value
* Fixed template chooser scroll problem
* Added preservation of emulation window available ports expansion state
* Enabled disclosure triangle for AVAILABLE PORTS (hidden by default)