@@ -46,7 +46,8 @@
 	[fCanvasView freeOpenGL];
     
 	CanvasWindow *window = (CanvasWindow *)[self window];
-    [window windowShouldClose:nil];
+    if ([window isFullscreen])
+        [window toggleFullscreen:self];
 }
 
 - (CanvasView *)canvasView
@@ -79,9 +80,11 @@
 	
 	CanvasWindow *window = (CanvasWindow *)[self window];
 	NSRect windowFrame = [window frame];
-	[window scaleFrame:1.0];
+	[self setActualSize:self];
 	[window setFrameTopLeftPoint:NSMakePoint(NSMinX(windowFrame),
 											 NSMaxY(windowFrame))];
+    
+    [[self window] setDelegate:self];
 }
 
 - (void)showWindow:(id)sender
@@ -101,7 +104,196 @@
 	[fCanvasView pasteString:text];
 }
 
+- (BOOL)validateUserInterfaceItem:(id)anItem
+{
+	CanvasWindow *window = (CanvasWindow *)[self window];
+    BOOL fullscreen = [window isFullscreen];
+	BOOL isResizable = !fullscreen && [fCanvasView isDisplayCanvas];
+	
+	if ([anItem action] == @selector(toggleToolbarShown:))
+	{
+		NSString *theTitle = ([[window toolbar] isVisible] ?
+                              NSLocalizedString(@"Hide Toolbar",
+                                                @"Main Menu.") :
+                              NSLocalizedString(@"Show Toolbar",
+                                                @"Main Menu."));
+		[anItem setTitle:theTitle];
+		
+		return YES;
+	}
+	else if ([anItem action] == @selector(toggleFullscreen:))
+	{
+		NSString *theTitle = (fullscreen ?
+                              NSLocalizedString(@"Exit Fullscreen",
+                                                @"Main Menu.") :
+                              NSLocalizedString(@"Enter Fullscreen",
+                                                @"Main Menu."));
+		[anItem setTitle:theTitle];
+		
+		return [fCanvasView isDisplayCanvas];
+	}
+	else if ([anItem action] == @selector(setHalfSize:))
+		return isResizable;
+	else if ([anItem action] == @selector(setActualSize:))
+		return isResizable;
+	else if ([anItem action] == @selector(setDoubleSize:))
+		return isResizable;
+	else if ([anItem action] == @selector(fitToScreen:))
+		return isResizable;
+	else if ([anItem action] == @selector(performZoom:))
+		return !fullscreen;
+	else if ([anItem action] == @selector(toggleToolbarShown:))
+		return !fullscreen;
+	else if ([anItem action] == @selector(runToolbarCustomizationPalette:))
+		return !fullscreen;
+	
+	return YES;
+}
 
+- (NSSize)windowWillResize:(NSWindow *)window toSize:(NSSize)proposedFrameSize
+{
+	if ([fCanvasView isDisplayCanvas])
+	{
+		NSSize defaultViewSize = [fCanvasView defaultViewSize];
+		float defaultViewRatio = defaultViewSize.width / defaultViewSize.height;
+		
+        NSWindow *window = [self window];
+		NSSize frameSize = [window frame].size;
+		NSSize viewSize = [[window contentView] frame].size;
+		float userScale = [window userSpaceScaleFactor];
+		NSSize titleSize = NSMakeSize(frameSize.width - viewSize.width * userScale,
+									  frameSize.height - viewSize.height * userScale);
+		
+		proposedFrameSize = NSMakeSize(proposedFrameSize.width - titleSize.width,
+									   proposedFrameSize.height - titleSize.height);
+		float proposedFrameRatio = proposedFrameSize.width / proposedFrameSize.height;
+		
+		if (defaultViewRatio > proposedFrameRatio)
+		{
+			float minWidth = 0.5 * defaultViewSize.width;
+			if (proposedFrameSize.width < minWidth)
+				proposedFrameSize.width = minWidth;
+			proposedFrameSize.height = proposedFrameSize.width / defaultViewRatio;
+		}
+		else
+		{
+			float minHeight = 0.5 * defaultViewSize.height;
+			if (proposedFrameSize.height < minHeight)
+				proposedFrameSize.height = minHeight;
+			proposedFrameSize.width = proposedFrameSize.height * defaultViewRatio;
+		}
+		
+		proposedFrameSize = NSMakeSize(round(proposedFrameSize.width + titleSize.width),
+									   round(proposedFrameSize.height + titleSize.height));
+	}
+	else if ([fCanvasView isPaperCanvas])
+	{
+		if (proposedFrameSize.width < 512)
+			proposedFrameSize.width = 512;
+		if (proposedFrameSize.height < 384)
+			proposedFrameSize.height = 384;
+	}
+	
+	return proposedFrameSize;
+}
+
+- (void)windowDidResize:(NSNotification *)notification
+{
+    [fCanvasView windowDidResize:notification];
+}
+
+- (void)windowWillClose:(NSNotification *)notification
+{
+    [fCanvasView windowWillClose:notification];
+}
+
+- (NSApplicationPresentationOptions)window:(NSWindow *)window
+      willUseFullScreenPresentationOptions:(NSApplicationPresentationOptions)proposedOptions
+{
+    return (proposedOptions | NSApplicationPresentationAutoHideToolbar);
+}
+
+- (void)scaleFrame:(float)scale
+{
+	NSSize defaultViewSize = [fCanvasView defaultViewSize];
+	float defaultViewRatio = defaultViewSize.width / defaultViewSize.height;
+	
+    NSWindow *window = [self window];
+	NSSize frameSize = [window frame].size;
+	NSSize viewSize = [[window contentView] frame].size;
+	float userScale = [window userSpaceScaleFactor];
+	NSSize titleSize = NSMakeSize(frameSize.width - viewSize.width * userScale,
+								  frameSize.height - viewSize.height * userScale);
+	
+	NSSize proposedSize = NSMakeSize(scale * userScale * defaultViewSize.width,
+									 scale * userScale * defaultViewSize.height);
+	float proposedRatio = proposedSize.width / proposedSize.height;
+	
+	NSRect screenRect = [[window screen] visibleFrame];
+	NSSize maxSize = NSMakeSize(screenRect.size.width - titleSize.width,
+								screenRect.size.height - titleSize.height);
+	
+	if (defaultViewRatio > proposedRatio)
+	{
+		if (proposedSize.width > maxSize.width)
+			proposedSize.width = maxSize.width;
+		proposedSize.height = proposedSize.width / defaultViewRatio;
+	}
+	else
+	{
+		if (proposedSize.height > maxSize.height)
+			proposedSize.height = maxSize.height;
+		proposedSize.width = proposedSize.height * defaultViewRatio;
+	}
+	
+	proposedSize.width += titleSize.width;
+	proposedSize.height += titleSize.height;
+	
+	NSRect frameRect = [window frame];
+	frameRect.origin.x = round(NSMidX(frameRect) - proposedSize.width / 2);
+	frameRect.origin.y = round(NSMaxY(frameRect) - proposedSize.height);
+	frameRect.size = proposedSize;
+	
+	if (NSMaxX(frameRect) > NSMaxX(screenRect))
+		frameRect.origin.x = NSMaxX(screenRect) - NSWidth(frameRect);
+	if (NSMaxY(frameRect) > NSMaxY(screenRect))
+		frameRect.origin.y = NSMaxY(screenRect) - NSHeight(frameRect);
+	if (NSMinX(frameRect) < NSMinX(screenRect))
+		frameRect.origin.x = NSMinX(screenRect);
+	if (NSMinY(frameRect) < NSMinY(screenRect))
+		frameRect.origin.y = NSMinY(screenRect);
+	
+	BOOL displayLinkRunning = [fCanvasView displayLinkRunning];
+	if (displayLinkRunning)
+		[fCanvasView stopDisplayLink];
+	
+	[window setFrame:frameRect display:YES animate:YES];
+	
+	if (displayLinkRunning)
+		[fCanvasView startDisplayLink];
+}
+
+- (void)setHalfSize:(id)sender
+{
+	[self scaleFrame:0.5];
+}
+
+- (void)setActualSize:(id)sender
+{
+	[self scaleFrame:1.0];
+}
+
+- (void)setDoubleSize:(id)sender
+{
+	[self scaleFrame:2.0];
+}
+
+- (void)fitToScreen:(id)sender
+{
+	[self scaleFrame:10000.0];
+}
+
+// Toolbar
 
 - (NSToolbarItem *)toolbar:(NSToolbar *)toolbar
 	 itemForItemIdentifier:(NSString *)ident
