@@ -621,7 +621,7 @@
 								</object>
 								<object class="NSMenuItem" id="379560557">
 									<reference key="NSMenu" ref="444160175"/>
-									<string key="NSTitle">Hide Toolbar</string>
+									<string key="NSTitle">Show Toolbar</string>
 									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
 									<reference key="NSOnImage" ref="1033313550"/>
